[project]
name = "bussdcc-hardware"
dynamic = [
    "version",
]
dependencies = [
    "bussdcc==0.32.2",
]
description = "Hardware device integrations for the BussDCC cybernetic runtime"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "hardware",
]
license = "MIT"

[project.entry-points."bussdcc.bus"]
gpio = "bussdcc_hardware.bus.gpio:GPIO"
i2c = "bussdcc_hardware.bus.i2c:I2CBus"
video = "bussdcc_hardware.bus.video:VideoBus"
w1 = "bussdcc_hardware.bus.w1:W1Bus"

[project.entry-points."bussdcc.device"]
ds18b20 = "bussdcc_hardware.device.ds18b20:DS18B20"
nau7802 = "bussdcc_hardware.device.nau7802:NAU7802"
pump = "bussdcc_hardware.device.pump:Pump"
relay = "bussdcc_hardware.device.relay:Relay"
usb_camera = "bussdcc_hardware.device.usb_camera:USBCamera"

[project.optional-dependencies]
dev = ["mypy"]
nau7802 = ["nau7802[i2c]==0.5.4"]
pump = ["types.RPi.GPIO"]
usb_camera = ["opencv-python-headless"]
video_bus = ["cv2-enumerate-cameras"]

[project.urls]
Homepage = "https://github.com/jbussdieker/bussdcc-hardware"
Documentation = "https://github.com/jbussdieker/bussdcc-hardware/blob/main/README.md"
Repository = "https://github.com/jbussdieker/bussdcc-hardware"
Issues = "https://github.com/jbussdieker/bussdcc-hardware/issues"
Changelog = "https://github.com/jbussdieker/bussdcc-hardware/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
