[project]
name = "bussdcc-hardware"
dynamic = [
    "version",
]
dependencies = [
    "bussdcc ~= 0.36.0",
]
description = "Hardware device integrations for the BussDCC cybernetic runtime"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "hardware",
]
license = "MIT"

[project.entry-points."bussdcc.bus"]
i2c = "bussdcc_hardware.bus.i2c:definition"
w1 = "bussdcc_hardware.bus.w1:definition"

[project.entry-points."bussdcc.device"]
ds18b20 = "bussdcc_hardware.device.ds18b20:definition"
nau7802 = "bussdcc_hardware.device.nau7802:definition"
pump = "bussdcc_hardware.device.pump:definition"
usb_camera = "bussdcc_hardware.device.usb_camera:definition"

[project.optional-dependencies]
dev = [
    "mypy ~= 1.19.1",
    "types.RPi.GPIO ~= 0.7.0",
]
nau7802 = ["nau7802[i2c] ~= 0.6.0"]
pump = ["RPi.GPIO ~= 0.7.1"]
usb_camera = ["opencv-python-headless ~= 4.13.0.92"]

[project.urls]
Homepage = "https://github.com/jbussdieker/bussdcc-hardware"
Documentation = "https://github.com/jbussdieker/bussdcc-hardware/blob/main/README.md"
Repository = "https://github.com/jbussdieker/bussdcc-hardware"
Issues = "https://github.com/jbussdieker/bussdcc-hardware/issues"
Changelog = "https://github.com/jbussdieker/bussdcc-hardware/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
