[project]
name = "bussdcc-hardware"
dynamic = [
    "version",
]
dependencies = [
    "bussdcc ~= 0.40.0",
]
description = "Provides hardware device integrations for bussdcc."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
maintainers = [
    { name = "Joshua B. Bussdieker", email = "jbussdieker@gmail.com" },
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Typing :: Typed",
]
keywords = [
    "hardware",
]
license = "MIT"

[project.entry-points."bussdcc.bus"]
i2c = "bussdcc_hardware.bus.i2c.definition:definition"
w1 = "bussdcc_hardware.bus.w1.definition:definition"
gpio = "bussdcc_hardware.bus.gpio.definition:definition"

[project.entry-points."bussdcc.device"]
ds18b20 = "bussdcc_hardware.device.ds18b20.definition:definition"
nau7802 = "bussdcc_hardware.device.nau7802.definition:definition"
digital_output = "bussdcc_hardware.device.digital_output.definition:definition"
usb_camera = "bussdcc_hardware.device.usb_camera.definition:definition"

[project.optional-dependencies]
dev = [
    "mypy ~= 1.19.1",
    "types.RPi.GPIO ~= 0.7.0",
]
nau7802 = ["nau7802[i2c] ~= 0.6.0"]
digital_output = ["RPi.GPIO ~= 0.7.1"]
usb_camera = ["opencv-python-headless ~= 4.13.0.92"]

[project.urls]
Homepage = "https://github.com/jbussdieker/bussdcc-hardware"
Documentation = "https://github.com/jbussdieker/bussdcc-hardware/blob/main/README.md"
Repository = "https://github.com/jbussdieker/bussdcc-hardware"
Issues = "https://github.com/jbussdieker/bussdcc-hardware/issues"
Changelog = "https://github.com/jbussdieker/bussdcc-hardware/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
